se agrega estilos y animaciones

--- a/Pagina.html
+++ b/Pagina.html
@@ -6,130 +6,9 @@
 
   <!-- Inclusión de la biblioteca jQuery recomendada en clase -->
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 30px;
-      background-color: #f0f2f5;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      display: flex;
-      justify-content: center;
-    }
-
-    .container {
-      width: 100%;
-      max-width: 600px;
-      background-color: #fff;
-      padding: 25px 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-    }
-
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-
-    #message {
-      display: none;
-      background-color: #d4edda;
-      color: #155724;
-      border: 1px solid #c3e6cb;
-      border-radius: 5px;
-      padding: 10px;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
-    .input-group {
-      display: flex;
-      gap: 10px;
-      margin: 20px 0;
-    }
-
-    #new-task {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 16px;
-    }
-
-    button {
-      padding: 10px 15px;
-      border: none;
-      border-radius: 6px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-
-    #agregar {
-      background-color: #007bff;
-      color: white;
-    }
-
-    #agregar:hover {
-      background-color: #0056b3;
-    }
-
-    #eliminar-tareas {
-      background-color: #dc3545;
-      color: white;
-    }
-
-    #eliminar-tareas:hover {
-      background-color: #b52a37;
-    }
-
-    ul#lista-tareas {
-      list-style: none;
-      padding: 0;
-    }
-
-    .task {
-      background-color: #f9f9f9;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 12px;
-      margin-bottom: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .task .texto-tarea {
-      flex-grow: 1;
-      font-size: 16px;
-    }
-
-    .task .edit-input {
-      flex-grow: 1;
-      font-size: 16px;
-      padding: 6px 8px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-
-    .completed {
-      text-decoration: line-through;
-      color: #999;
-    }
-
-    .buttons button {
-      background-color: #6c757d;
-      color: white;
-      margin-left: 6px;
-    }
-
-    .buttons button:hover {
-      background-color: #5a6268;
-    }
-  </style>
+<link rel="stylesheet" href="estilos.css">
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script src="animaciones.js"></script>
 </head>
 <body>
   <div class="container">
@@ -147,68 +26,6 @@
     <ul id="lista-tareas"></ul>
   </div>
 
-  <script>
-    // Esperamos a que el DOM esté completamente cargado
-    $(document).ready(function () {
-      // Evento para agregar una nueva tarea
-      $('#agregar').click(function () {
-        const texto = $('#new-task').val().trim();
-
-        if (texto !== '') {
-          const nuevaTarea = $(`
-            <li class="task">
-              <span class="texto-tarea">${texto}</span>
-              <div class="buttons">
-                <button class="edit">Editar</button>
-                <button class="hecho">Completado</button>
-                <button class="delete">Eliminar</button>
-              </div>
-            </li>
-          `);
-
-          $('#lista-tareas').append(nuevaTarea);
-          $('#new-task').val('');
-          $('#message').fadeIn(300).delay(1000).fadeOut(300); // Efecto de mensaje
-        }
-      });
-
-      // Marcar tarea como completada
-      $('#lista-tareas').on('click', '.hecho', function () {
-        $(this).closest('.task').find('.texto-tarea').toggleClass('completed');
-      });
-
-      // Eliminar una tarea
-      $('#lista-tareas').on('click', '.delete', function () {
-        $(this).closest('.task').remove();
-      });
-
-      // Cambiar a modo edición
-      $('#lista-tareas').on('click', '.edit', function () {
-        const task = $(this).closest('.task');
-        const textoActual = task.find('.texto-tarea').text();
-        const input = $(`<input type="text" class="edit-input" value="${textoActual}">`);
-        const guardar = $('<button class="save">Guardar</button>');
-
-        task.find('.texto-tarea').replaceWith(input);
-        $(this).replaceWith(guardar);
-      });
-
-      // Guardar edición
-      $('#lista-tareas').on('click', '.save', function () {
-        const task = $(this).closest('.task');
-        const nuevoTexto = task.find('.edit-input').val().trim();
-        const span = $(`<span class="texto-tarea">${nuevoTexto}</span>`);
-        const editar = $('<button class="edit">Editar</button>');
-
-        task.find('.edit-input').replaceWith(span);
-        $(this).replaceWith(editar);
-      });
-
-      // Vaciar la lista de tareas
-      $('#eliminar-tareas').click(function () {
-        $('#lista-tareas').empty();
-      });
-    });
-  </script>
+  
 </body>
 </html>
